# godot-haskell-bindings

./: .gitignore  .gitmodules  ChangeLog.md  README.md  godot-haskell-bindings.cabal  shell.nix
examples/hello-world/: .gitignore  Main.tscn  hello-world-library.gdnlib  hello-world.cabal  project.godot  shell.nix
examples/hello-world/cbits/: godothooks.c
examples/hello-world/src/: HelloWorld.hs
src/: GDNative.hs
src/GDNative/Internal/: ApiStructGen.chs  Init.hs
src/GDNative/Internal/Core/: AABB.chs  Array.chs  Basis.chs  Color.chs  Dictionary.chs  GDNative.chs  NodePath.chs  Plane.chs  PoolArrays.chs  Quat.chs  RID.chs  Rect2.chs  String.chs  StringName.chs  Transform.chs  Transform2D.chs  Variant.chs  Vector2.chs  Vector3.chs
