cabal-version: 2.0

name:           godot-haskell-bindings
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/FortOyer/godot-haskell-bindings#readme>
homepage:       https://github.com/FortOyer/godot-haskell-bindings#readme
bug-reports:    https://github.com/FortOyer/godot-haskell-bindings/issues
author:         Archibald Neil MacDonald
maintainer:     FortOyer@hotmail.co.uk
copyright:      2019 Archibald Neil MacDonald
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/FortOyer/godot-haskell-bindings

library
  exposed-modules:
      GDNative
  other-modules:
      GDNative.Internal.Core.AABB
      GDNative.Internal.Core.Array
      GDNative.Internal.Core.Basis
      GDNative.Internal.Core.Color
      GDNative.Internal.Core.Dictionary
      GDNative.Internal.Core.GDNative
      GDNative.Internal.Core.NodePath
      GDNative.Internal.Core.Plane
      GDNative.Internal.Core.PoolArrays
      GDNative.Internal.Core.Quat
      GDNative.Internal.Core.Rect2
      GDNative.Internal.Core.RID
      GDNative.Internal.Core.String
      GDNative.Internal.Core.StringName
      GDNative.Internal.Core.Transform
      GDNative.Internal.Core.Transform2D
      GDNative.Internal.Core.Variant
      GDNative.Internal.Core.Vector2
      GDNative.Internal.Core.Vector3
      GDNative.Internal.ApiStructGen
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language:
    Haskell2010
  include-dirs:
    gdnative-sys-bindgen/godot_headers
  includes:
    gdnative_api_struct.gen.h
  build-tool-depends:
    c2hs:c2hs

test-suite godot-haskell-bindings-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , godot-haskell-bindings
    , hspec
  default-language: Haskell2010
