cabal-version: 2.0

name:           hello-world
version:        0.1.0.0
license:        MIT
build-type:     Simple

foreign-library hello-world
  type: native-shared
  
  if os(Windows)
    options: standalone
    mod-def-file: hello-world.def

  other-modules: HelloWorld

  c-sources: cbits/godothooks.c

  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , godot-haskell-bindings
  default-language: Haskell2010
